--- a/force-app/main/default/pages/EditSetupRecord.page
+++ b/force-app/main/default/pages/EditSetupRecord.page
@@ -34,6 +34,10 @@
                         <apex:inputText required="true" value="{!editingRow.Payment_Endpoint__c}" style="width:95%" />
                     </apex:pageBlockSectionItem>
                     <apex:pageBlockSectionItem>
+                        <apex:outputLabel value="{!$ObjectType.Merchant__mdt.fields.PaymentMethods_Endpoint__c.label}"/>
+                        <apex:inputText required="true" value="{!editingRow.PaymentMethods_Endpoint__c}" style="width:95%" />
+                    </apex:pageBlockSectionItem>
+                    <apex:pageBlockSectionItem>
                         <apex:outputLabel value="{!$ObjectType.Merchant__mdt.fields.Capture_Endpoint__c.label}"/>
                         <apex:inputText required="true" value="{!editingRow.Capture_Endpoint__c}" style="width:95%" />
                     </apex:pageBlockSectionItem>
