--- a/force-app/main/default/pages/pmt_adyencc_pay.page
+++ b/force-app/main/default/pages/pmt_adyencc_pay.page
@@ -1,6 +1,7 @@
 <apex:page controller="PmtAdyenPayController" docType="html-5.0" applyHtmlTag="false" showHeader="false" sidebar="false" standardStylesheets="false">
     <apex:includeScript value="{! $Resource.validations }"/>
     <apex:includeScript value="{! $Resource.adyenComponent }"/>
+    <apex:includeScript value="{! $Resource.adyenCheckout }"/>
     <link rel="stylesheet" href="https://checkoutshopper-test.adyen.com/checkoutshopper/sdk/3.16.1/adyen.css"/>
     <script id="AdyenCCPayment" type="text/template">
         <div id="overlayCustom" class="modal-backdrop fade in" style="display: none"></div>
@@ -9,6 +10,7 @@
                 <h3 class="panel-title cc_title">{{labels.title}}</h3>
             </div>
             <div id="component-container"></div>
+            <div id="paymentMethodsList"></div>
             <div class="panel-body cc_body">
                  <form id="payAdyenccForm" class="form-horizontal newAdyenForm cc_form-horizontal cc_new_adyen_form payAdyenccForm">
                      <input type="hidden" id="adyenStateData" />
@@ -19,39 +21,22 @@
     </script>
 
     <script type="text/javascript">
-    function renderAdyenComponent(paymentMethods) {
-        //TODOBAS This will be configurable in later phase. Also client key instead of originKey
-        const configuration = {
-            locale: "en_US",
-            environment: "test",
-            originKey: "pub.v2.8115716704476750.aHR0cHM6Ly9iMmItc2NvcGluZy0wOTIwLWRldmVsb3Blci1lZGl0aW9uLm5hMTM5LmZvcmNlLmNvbQ.Ilcqb9JijpuM1Q0qCZy2AeAA_89bns5qIdoQSsYgaYM",
-            paymentMethodsResponse: paymentMethods,
-            onChange: handleOnChange,
-        };
-        const checkout = new AdyenCheckout(configuration);
-        const card = checkout.create('card').mount('#component-container');
-    }
-
-    function handleOnChange(state){
-        //handleOnChange
-    }
+    Visualforce.remoting.Manager.invokeAction(
+        '{!$RemoteAction.PmtAdyenPayController.getPaymentMethods}',
+        CCRZ.pagevars.remoteContext,
+        function(result, event){
+            console.log("getPaymentMethods external");
+            if(result.data){
+                renderAdyenComponent(result.data);
+            }
+        },
+        { escape: true }
+    );
 
     let isGuest = {!JSENCODE(IF(isGuest, "true", "false"))};
+
     CCRZ.models.PaymentsAdyenCCModel = CCRZ.CloudCrazeModel.extend({
-        form: {
-            accountNumber: {label: CCRZ.processPageLabelMap('Adyencc_CheckoutAccountNumber'), value: '', type:"text", maxlength: 19, placeholder: '4111111111111111', class: "qty", show: true},
-            expirationMonth: {label: CCRZ.processPageLabelMap('Adyencc_CheckoutExpirationMonth'), value: '', type:"text", maxlength: 2, placeholder: 'MM', class: "qty", show: true},
-            expirationYear: {label: CCRZ.processPageLabelMap('Adyencc_CheckoutExpirationYear'), value: '', type:"text", maxlength: 4, placeholder: 'YYYY', class: "qty", show: true},
-            verificationCode: {label: CCRZ.processPageLabelMap('Adyencc_CheckoutVerificeationCode'), value: '', type:"text", maxlength: 4, placeholder: '000', class: "qty", show: true},
-            saveAsStoredPayment: {label: CCRZ.processPageLabelMap('Adyencc_CheckoutSavePmtMethod'), value: '', type:"checkbox", show: !isGuest},
-            accountName: {label: CCRZ.processPageLabelMap('Adyencc_CheckoutName'), value: '', type:"text", maxlength: 255, show: !isGuest}
-        },
-        errors: null,
-        labels: {
-            title: CCRZ.processPageLabelMap('Adyencc_CheckoutTitle'),
-            instructions: CCRZ.processPageLabelMap('Adyencc_CheckoutInstructions'),
-            order: CCRZ.processPageLabelMap('Adyencc_CheckoutOrder')
-        }
+        //Add stateData here
     });
 
     CCRZ.views.AdyenCCPaymentView = CCRZ.CloudCrazeView.extend({
@@ -70,16 +55,6 @@
             this.model = options.model;
             this.render();
             CCRZ.pubSub.trigger('action:paymentViewInit',this);
-            Visualforce.remoting.Manager.invokeAction(
-                '{!$RemoteAction.PmtAdyenPayController.getPaymentMethods}',
-                CCRZ.pagevars.remoteContext,
-                function(result, event){
-                    if(result.data){
-                        renderAdyenComponent(result.data);
-                    }
-                },
-                { escape: true }
-            );
         },
         renderDesktop: function(){
             this.setElement(this.selector);
@@ -92,33 +67,34 @@
             this.$el.html(this.templatePhone(this.model));
             return this;
         },
-        initValidation : function() {
-            jQuery.validator.addMethod("ccNumber", function (value, element) {
-                return luhnCheck(value);
-            }, CCRZ.pagevars.pageLabels['PMTAdyencc_accountNumberInvalid']);
-            $('#payAdyenccForm').validate({
-                invalidHandler : function(event, validator) {
-                    CCRZ.handleValidationErrors(event, validator, 'error_messages_section', false);
-                },
-                rules : {
-                    accountNumber : { required : true, ccNumber : true },
-                    expirationMonth : { required : true, range : [1, 12] },
-                    expirationYear : { required : true },
-                    verificationCode : { required : true, minlength : 3, maxlength : 4}
-                },
-                messages : {
-                    accountNumber : { required : CCRZ.pagevars.pageLabels['PMTAdyencc_accountNumberReq']},
-                    expirationMonth : { required : CCRZ.pagevars.pageLabels['PMTAdyencc_expirationMonthReq'], range : CCRZ.pagevars.pageLabels['PMTAdyencc_expirationMonthInvalid']},
-                    expirationYear : { required : CCRZ.pagevars.pageLabels['PMTAdyencc_expirationYearReq']},
-                    verificationCode : { required : CCRZ.pagevars.pageLabels['PMTAdyencc_verificationCodeReq'], minlength : CCRZ.pagevars.pageLabels['PMTAdyencc_verificationCodeInvalid'], maxlength : CCRZ.pagevars.pageLabels['PMTAdyencc_verificationCodeInvalid']}
-                },
-                errorPlacement : function(error, element) { }
-            });
-        },
+        // initValidation : function() {
+        //     jQuery.validator.addMethod("ccNumber", function (value, element) {
+        //         return luhnCheck(value);
+        //     }, CCRZ.pagevars.pageLabels['PMTAdyencc_accountNumberInvalid']);
+        //     $('#payAdyenccForm').validate({
+        //         invalidHandler : function(event, validator) {
+        //             CCRZ.handleValidationErrors(event, validator, 'error_messages_section', false);
+        //         },
+        //         rules : {
+        //             accountNumber : { required : true, ccNumber : true },
+        //             expirationMonth : { required : true, range : [1, 12] },
+        //             expirationYear : { required : true },
+        //             verificationCode : { required : true, minlength : 3, maxlength : 4}
+        //         },
+        //         messages : {
+        //             accountNumber : { required : CCRZ.pagevars.pageLabels['PMTAdyencc_accountNumberReq']},
+        //             expirationMonth : { required : CCRZ.pagevars.pageLabels['PMTAdyencc_expirationMonthReq'], range : CCRZ.pagevars.pageLabels['PMTAdyencc_expirationMonthInvalid']},
+        //             expirationYear : { required : CCRZ.pagevars.pageLabels['PMTAdyencc_expirationYearReq']},
+        //             verificationCode : { required : CCRZ.pagevars.pageLabels['PMTAdyencc_verificationCodeReq'], minlength : CCRZ.pagevars.pageLabels['PMTAdyencc_verificationCodeInvalid'], maxlength : CCRZ.pagevars.pageLabels['PMTAdyencc_verificationCodeInvalid']}
+        //         },
+        //         errorPlacement : function(error, element) { }
+        //     });
+        // },
         postRender : function() {
-            this.initValidation();
+            // this.initValidation();
         },
         submitStep: function() {
+            //TODOBAS add here stateData.isValid check
             if ($('#payAdyenccForm').valid()) {
                 event.preventDefault();
                 let self = this;
@@ -144,31 +120,8 @@
                 );
             }
         },
-        fieldChanged: function(e) {
-            field = $(e.currentTarget);
-            let value = '';
-            if (field.get(0).tagName == 'SELECT')
-                value = $("option:selected", field).val();
-            else if (field.get(0).type == 'checkbox')
-                value = field.get(0).checked;
-                else
-                {
-                    if(field.get(0).className.includes('qty'))
-                    {
-                        value = field.val().replace(/\D/g,'');
-                        field.val(value);
-                    }
-                    else
-                    {
-                        value = field.val();
-                    }
-                    
-                }
-            this.model.form[field.attr('name')].value = value;
-        }
-        
     });
-    
+
     CCRZ.pubSub.trigger('action:paymentViewReady','adyencc',function(options){
         CCRZ.payment = CCRZ.payment||{views:{}};
         CCRZ.payment.views.adyencc = new CCRZ.views.AdyenCCPaymentView({
