render paymentMethods, added logos, convert reserved keywords

--- a/force-app/main/default/pages/pmt_adyencc_pay.page
+++ b/force-app/main/default/pages/pmt_adyencc_pay.page
@@ -25,9 +25,9 @@
         '{!$RemoteAction.PmtAdyenPayController.getPaymentMethods}',
         CCRZ.pagevars.remoteContext,
         function(result, event){
-            console.log("getPaymentMethods external");
             if(result.data){
-                renderAdyenComponent(result.data);
+                const paymentMethods = convertToJsonObject(result.data);
+                renderAdyenComponent(paymentMethods);
             }
         },
         { escape: true }
