--- a/force-app/main/default/pages/pmt_adyencc_pay.page
+++ b/force-app/main/default/pages/pmt_adyencc_pay.page
@@ -1,7 +1,8 @@
 <apex:page controller="PmtAdyenPayController" docType="html-5.0" applyHtmlTag="false" showHeader="false" sidebar="false" standardStylesheets="false">
     <apex:includeScript value="{! $Resource.validations }"/>
     <apex:includeScript value="{! $Resource.adyenComponent }"/>
-    <apex:includeScript value="{! $Resource.adyenCheckout }"/>
+    <apex:includeScript value="{! $Resource.adyenPaymentMethods }"/>
+    <apex:includeScript value="{! $Resource.adyenHandlePayment }"/>
     <link rel="stylesheet" href="https://checkoutshopper-test.adyen.com/checkoutshopper/sdk/3.16.1/adyen.css"/>
     <script id="AdyenCCPayment" type="text/template">
         <div id="overlayCustom" class="modal-backdrop fade in" style="display: none"></div>
@@ -13,7 +14,7 @@
             <div id="paymentMethodsList"></div>
             <div class="panel-body cc_body">
                  <form id="payAdyenccForm" class="form-horizontal newAdyenForm cc_form-horizontal cc_new_adyen_form payAdyenccForm">
-                     <input type="hidden" id="adyenStateData" />
+                     <input type="hidden" id="adyenStateData" name="adyenStateData"/>
                          <input type="button" class="btn btn-default btn-sm button makeAdyenPayment cc_make_adyen_payment submitStep" style="padding: 9px 17px 7px; font-size: 11px;" value="{{pageLabelMap 'Payment_MakePayment'}}"></input>
                  </form>
             </div>
@@ -37,6 +38,9 @@
 
     CCRZ.models.PaymentsAdyenCCModel = CCRZ.CloudCrazeModel.extend({
         //Add stateData here
+        // form: {
+        //     adyenStateData: adyenStateData
+        // },
     });
 
     CCRZ.views.AdyenCCPaymentView = CCRZ.CloudCrazeView.extend({
@@ -53,8 +57,8 @@
         init : function(options){
             this.selector = options.selector;
             this.model = options.model;
+            CCRZ.pubSub.trigger('action:paymentViewInit', this);
             this.render();
-            CCRZ.pubSub.trigger('action:paymentViewInit',this);
         },
         renderDesktop: function(){
             this.setElement(this.selector);
@@ -68,34 +72,65 @@
             return this;
         },
         submitStep: function() {
-            //TODOBAS add here stateData.isValid check
-            if ($('#payAdyenccForm').valid()) {
-                event.preventDefault();
-                let self = this;
-                loadingToggle();
-                Visualforce.remoting.Manager.invokeAction(
-                    '{!$RemoteAction.PmtAdyenPayController.pressMeCcrz}',
-                    CCRZ.pagevars.remoteContext,
-                    this.model.form,
-                    function(result, event){
-                        if (event.status && result.success) {
-                            self.model.errors = null;
-                            window.location.href = CCRZ.pagevars.currSiteURL + 'ccrz__OrderConfirmation?o='+result.data.orderInfo.ordId;
-                        } else if (event.type === 'exception') {
-                            self.model.errors = result.messages;
-                            loadingToggle();
-                        } else {
-                            self.model.errors = result.messages;
-                            loadingToggle();
-                        }
-                        self.render();
-                    },
-                    {escape: true}
-                );
+            if(!validateComponent()){
+                return false;
             }
+
+            Visualforce.remoting.Manager.invokeAction(
+                '{!$RemoteAction.PmtAdyenPayController.pressMeCcrz}',
+                CCRZ.pagevars.remoteContext,
+                document.getElementById("adyenStateData").value,
+                function(result, event){
+                    if (event.status && result.success) {
+                        self.model.errors = null;
+                        window.location.href = CCRZ.pagevars.currSiteURL + 'ccrz__OrderConfirmation?o='+result.data.orderInfo.ordId;
+                    } else if (event.type === 'exception') {
+                        self.model.errors = result.messages;
+                        loadingToggle();
+                    } else {
+                        self.model.errors = result.messages;
+                        loadingToggle();
+                    }
+                    self.render();
+                },
+                { escape: true }
+            );
+
+            // //TODOBAS add here stateData.isValid check
+            // if ($('#payAdyenccForm').valid()) {
+            //     event.preventDefault();
+            //     let self = this;
+            //     loadingToggle();
+            //     Visualforce.remoting.Manager.invokeAction(
+            //         '{!$RemoteAction.PmtAdyenPayController.pressMeCcrz}',
+            //         CCRZ.pagevars.remoteContext,
+            //         this.model.form,
+            //         function(result, event){
+            //             if (event.status && result.success) {
+            //                 self.model.errors = null;
+            //                 window.location.href = CCRZ.pagevars.currSiteURL + 'ccrz__OrderConfirmation?o='+result.data.orderInfo.ordId;
+            //             } else if (event.type === 'exception') {
+            //                 self.model.errors = result.messages;
+            //                 loadingToggle();
+            //             } else {
+            //                 self.model.errors = result.messages;
+            //                 loadingToggle();
+            //             }
+            //             self.render();
+            //         },
+            //         {escape: true}
+            //     );
+            // }
         },
     });
 
+    // action:paymentViewInit
+    CCRZ.pubSub.trigger('action:paymentViewInit','adyencc',function(options){
+        console.log("paymentViewInit");
+        debugger;
+    });
+
+    // action:paymentViewInit
     CCRZ.pubSub.trigger('action:paymentViewReady','adyencc',function(options){
         CCRZ.payment = CCRZ.payment||{views:{}};
         CCRZ.payment.views.adyencc = new CCRZ.views.AdyenCCPaymentView({
