--- a/force-app/main/default/pages/pmt_adyencc_pay.page
+++ b/force-app/main/default/pages/pmt_adyencc_pay.page
@@ -68,31 +68,28 @@
             return this;
         },
         submitStep: function() {
-            //TODOBAS add here stateData.isValid check
-            if ($('#payAdyenccForm').valid()) {
-                event.preventDefault();
-                let self = this;
-                loadingToggle();
-                Visualforce.remoting.Manager.invokeAction(
-                    '{!$RemoteAction.PmtAdyenPayController.pressMeCcrz}',
-                    CCRZ.pagevars.remoteContext,
-                    this.model.form,
-                    function(result, event){
-                        if (event.status && result.success) {
-                            self.model.errors = null;
-                            window.location.href = CCRZ.pagevars.currSiteURL + 'ccrz__OrderConfirmation?o='+result.data.orderInfo.ordId;
-                        } else if (event.type === 'exception') {
-                            self.model.errors = result.messages;
-                            loadingToggle();
-                        } else {
-                            self.model.errors = result.messages;
-                            loadingToggle();
-                        }
-                        self.render();
-                    },
-                    {escape: true}
-                );
-            }
+          //TODOBAS add here stateData.isValid check
+          Visualforce.remoting.Manager.invokeAction(
+                '{!$RemoteAction.PmtAdyenPayController.pressMeCcrz}',
+                CCRZ.pagevars.remoteContext,
+                document.getElementById("adyenStateData").value,
+                function(result, event){
+                    if (event.status && result.success) {
+                        self.model.errors = null;
+                        var orderSuccessUrl = new URL(CCRZ.pagevars.currSiteURL + 'ccrz__OrderConfirmation');
+                        orderSuccessUrl.searchParams.append('o', result.data.orderInfo.ordId);
+                        window.location.href = orderSuccessUrl;
+                    } else if (event.type === 'exception') {
+                        self.model.errors = result.messages;
+                        loadingToggle();
+                    } else {
+                        self.model.errors = result.messages;
+                        loadingToggle();
+                    }
+                    self.render();
+                },
+                { escape: true }
+            );
         },
     });
 
