Cleaned up loggers and comments

--- a/force-app/main/default/pages/pmt_adyencc_pay.page
+++ b/force-app/main/default/pages/pmt_adyencc_pay.page
@@ -70,7 +70,7 @@
         submitStep: function() {
           //TODOBAS add here stateData.isValid check
           Visualforce.remoting.Manager.invokeAction(
-                '{!$RemoteAction.PmtAdyenPayController.pressMeCcrz}',
+                '{!$RemoteAction.PmtAdyenPayController.placeOrderAdyen}',
                 CCRZ.pagevars.remoteContext,
                 document.getElementById("adyenStateData").value,
                 function(result, event){
