--- a/force-app/main/default/pages/pmt_adyencc_pay.page
+++ b/force-app/main/default/pages/pmt_adyencc_pay.page
@@ -70,23 +70,17 @@
         submitStep: function() {
           //TODOBAS add here stateData.isValid check
           Visualforce.remoting.Manager.invokeAction(
-                '{!$RemoteAction.PmtAdyenPayController.pressMeCcrz}',
+                '{!$RemoteAction.PmtAdyenPayController.placeOrderAdyen}',
                 CCRZ.pagevars.remoteContext,
                 document.getElementById("adyenStateData").value,
                 function(result, event){
                     if (event.status && result.success) {
-                        self.model.errors = null;
                         var orderSuccessUrl = new URL(CCRZ.pagevars.currSiteURL + 'ccrz__OrderConfirmation');
-                        orderSuccessUrl.searchParams.append('o', result.data.orderInfo.ordId);
+                        orderSuccessUrl.searchParams.append('o', result.data.ordId);
                         window.location.href = orderSuccessUrl;
-                    } else if (event.type === 'exception') {
-                        self.model.errors = result.messages;
-                        loadingToggle();
                     } else {
-                        self.model.errors = result.messages;
-                        loadingToggle();
+                        //handle payment action
                     }
-                    self.render();
                 },
                 { escape: true }
             );
