Undefined variables fix

--- a/force-app/main/default/pages/pmt_adyencc_pay.page
+++ b/force-app/main/default/pages/pmt_adyencc_pay.page
@@ -40,6 +40,9 @@
         { escape: true }
     );
 
+     CCRZ.models.PaymentsAdyenCCModel = CCRZ.CloudCrazeModel.extend({
+    });
+
     CCRZ.views.AdyenCCPaymentView = CCRZ.CloudCrazeView.extend({
         viewName : "AdyenCCPaymentView",
         className : "PmtAdyenPayController",
