WIP returnUrl, payments/details

--- a/force-app/main/default/pages/AdyenReturnUrl.page
+++ b/force-app/main/default/pages/AdyenReturnUrl.page
@@ -1,4 +1,4 @@
-<apex:page controller="AdyenReturnUrl" action="{!pageReferenceMethod}">
+<apex:page controller="AdyenReturnUrl">
     <div>
         Test
     </div>
