WIP Create open order, paymentsdetails call, paymentsdetails config, onAdditionalDetails

--- a/force-app/main/default/pages/pmt_adyencc_pay.page
+++ b/force-app/main/default/pages/pmt_adyencc_pay.page
@@ -88,6 +88,8 @@
                 CCRZ.pagevars.remoteContext,
                 document.getElementById("adyenStateData").value,
                 function(result, event){
+                    console.log('templateResult');
+                    console.log(result);
                     if (!result.data.isFinal && result.data.action) {
                          //handle payment action
                         handleAction(result.data.action);
