--- a/force-app/main/default/pages/EditSetupRecord.page
+++ b/force-app/main/default/pages/EditSetupRecord.page
@@ -26,8 +26,8 @@
                         <apex:inputText required="true" value="{!editingRow.MasterLabel}" />
                     </apex:pageBlockSectionItem>-->
                     <apex:pageBlockSectionItem>
-                        <apex:outputLabel value="{!$ObjectType.Merchant__mdt.fields.Name__c.label}"/>
-                        <apex:inputText required="true" value="{!editingRow.Name__c}" />
+                        <apex:outputLabel value="{!$ObjectType.Merchant__mdt.fields.Merchant_Account__c.label}"/>
+                        <apex:inputText required="true" value="{!editingRow.Merchant_Account__c}" />
                     </apex:pageBlockSectionItem>
                     <apex:pageBlockSectionItem>
                         <apex:outputLabel value="{!$ObjectType.Merchant__mdt.fields.Payment_Endpoint__c.label}"/>
@@ -36,6 +36,10 @@
                     <apex:pageBlockSectionItem>
                         <apex:outputLabel value="{!$ObjectType.Merchant__mdt.fields.PaymentMethods_Endpoint__c.label}"/>
                         <apex:inputText required="true" value="{!editingRow.PaymentMethods_Endpoint__c}" style="width:95%" />
+                    </apex:pageBlockSectionItem>
+                    <apex:pageBlockSectionItem>
+                        <apex:outputLabel value="{!$ObjectType.Merchant__mdt.fields.Payments_Details_Endpoint__c.label}"/>
+                        <apex:inputText required="true" value="{!editingRow.Payments_Details_Endpoint__c}" style="width:95%" />
                     </apex:pageBlockSectionItem>
                     <apex:pageBlockSectionItem>
                         <apex:outputLabel value="{!$ObjectType.Merchant__mdt.fields.Capture_Endpoint__c.label}"/>
