--- a/force-app/main/default/pages/pmt_adyencc_pay.page
+++ b/force-app/main/default/pages/pmt_adyencc_pay.page
@@ -88,18 +88,10 @@
                 CCRZ.pagevars.remoteContext,
                 document.getElementById("adyenStateData").value,
                 function(result, event){
-                    if (!result.data.isFinal && result.data.action) {
+                    if(result.data.cartId){
                         window.cartId = result.data.cartId;
-                         //handle payment action
-                        handleAction(result.data.action);
-                    } else if(result.data.orderIdEnc) {
-                        var orderSuccessUrl = new URL(CCRZ.pagevars.currSiteURL + 'ccrz__OrderConfirmation');
-                        orderSuccessUrl.searchParams.append('o', result.data.orderIdEnc);
-                        window.location.href = orderSuccessUrl;
-                    } else {
-                        self.model.errors = result.messages;
-                        return false;
                     }
+                    handlePaymentResult(result.data);
                 },
                 { escape: true }
             );
