WIP render card component

--- a/force-app/main/default/pages/pmt_adyencc_pay.page
+++ b/force-app/main/default/pages/pmt_adyencc_pay.page
@@ -42,6 +42,7 @@
         '{!$RemoteAction.PmtAdyenPayController.getPaymentMethods}',
         CCRZ.pagevars.remoteContext,
         function(result, event){
+            console.log(result);
             if(result.data){
                 const paymentMethods = convertToJsonObject(result.data);
                 renderAdyenComponent(paymentMethods);
