--- a/force-app/main/default/pages/Setup.page
+++ b/force-app/main/default/pages/Setup.page
@@ -1,30 +1,30 @@
 <apex:page controller="SetupController" showHeader="true" title="{!$Label.Setup_Title}" tabStyle="Adyen_Setup__tab" lightningStylesheets="true">
-<!--    <apex:sectionHeader title="{!$Label.Setup_Title}" subTitle="{!$Organization.Name}"/>-->
-<!--    <apex:form id="theForm">-->
-<!--        <apex:actionPoller action="{!jobReady}" interval="5" rendered="{!needsRefresh}" reRender="{!$Component.theForm}"/>-->
-<!--        <apex:pageMessages />-->
-<!--        <apex:pageBlock >-->
-<!--            <apex:pageBlockButtons location="top">-->
-<!--                <apex:commandButton rendered="{!ISBLANK(editingRow)}" value="{!$Label.Refresh}" action="{!jobReady}" />-->
-<!--                <apex:commandButton rendered="{!ISBLANK(editingRow)}" value="{!$Label.New}" action="{!newRow}" />-->
-<!--            </apex:pageBlockButtons>-->
-<!--            <apex:pageBlockSection rendered="{!ISBLANK(editingRow)}" title="{!$Label.Merchants}" columns="1" collapsible="false">-->
-<!--                <apex:actionRegion >-->
-<!--                    <apex:pageBlockTable value="{!settings}" var="configRecord" id="theTable">-->
-<!--                        <apex:column headerValue="{!$Label.Edit}" width="25%">-->
-<!--                            <apex:commandLink action="{!editRow}">-->
-<!--                                <apex:param value="{!configRecord.DeveloperName}" name="editId" assignTo="{!editId}"/>-->
-<!--                                <apex:outputText value="{!configRecord.MasterLabel}" />-->
-<!--                            </apex:commandLink>-->
-<!--                        </apex:column>-->
-<!--                        <apex:column value="{!configRecord.DeveloperName}" width="25%" />-->
-<!--                        <apex:column value="{!configRecord.Name__c}" width="25%" />-->
-<!--                        <apex:column value="{!configRecord.Authorise_Endpoint__c}" width="25%" />-->
-<!--                    </apex:pageBlockTable>-->
+    <apex:sectionHeader title="{!$Label.Setup_Title}" subTitle="{!$Organization.Name}"/>
+    <apex:form id="theForm">
+        <apex:actionPoller action="{!jobReady}" interval="5" rendered="{!needsRefresh}" reRender="{!$Component.theForm}"/>
+        <apex:pageMessages />
+        <apex:pageBlock >
+            <apex:pageBlockButtons location="top">
+                <apex:commandButton rendered="{!ISBLANK(editingRow)}" value="{!$Label.Refresh}" action="{!jobReady}" />
+                <apex:commandButton rendered="{!ISBLANK(editingRow)}" value="{!$Label.New}" action="{!newRow}" />
+            </apex:pageBlockButtons>
+            <apex:pageBlockSection rendered="{!ISBLANK(editingRow)}" title="{!$Label.Merchants}" columns="1" collapsible="false">
+                <apex:actionRegion >
+                    <apex:pageBlockTable value="{!settings}" var="configRecord" id="theTable">
+                        <apex:column headerValue="{!$Label.Edit}" width="25%">
+                            <apex:commandLink action="{!editRow}">
+                                <apex:param value="{!configRecord.DeveloperName}" name="editId" assignTo="{!editId}"/>
+                                <apex:outputText value="{!configRecord.MasterLabel}" />
+                            </apex:commandLink>
+                        </apex:column>
+                        <apex:column value="{!configRecord.DeveloperName}" width="25%" />
+                        <apex:column value="{!configRecord.Merchant_Account__c}" width="25%" />
+                        <apex:column value="{!configRecord.Authorise_Endpoint__c}" width="25%" />
+                    </apex:pageBlockTable>
 
-<!--                </apex:actionRegion>-->
-<!--            </apex:pageBlockSection>-->
-<!--        </apex:pageBlock>-->
+                </apex:actionRegion>
+            </apex:pageBlockSection>
+        </apex:pageBlock>
 
-<!--    </apex:form>-->
+    </apex:form>
 </apex:page>
